2008-02-04  Kenichi Handa  <handa@ni.aist.go.jp>

	* fontset.c (Ffontset_info): Handle the case of inhibitting the
	fallback fonts.
	(Ffontset_info) [USE_FONT_BACKEND]: Fix getting of opened font
	names.

2008-02-01  Kenichi Handa  <handa@ni.aist.go.jp>

	* ccl.c (CCL_WRITE_CHAR, CCL_WRITE_MULTIBYTE_CHAR, ccl_driver):
	Cancel previous change.

2008-01-31  Kenichi Handa  <handa@ni.aist.go.jp>

	* ccl.c (CCL_WRITE_CHAR): Increment extra_bytes only when
	ccl->eight_bit_control.  Fix check for buffer overflow.
	(CCL_WRITE_MULTIBYTE_CHAR): Fix check for buffer overflow.
	(ccl_driver): Initialize extra_bytes to 0.

2008-02-04  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_open_internal): Use font_unparse_fcname to
	set full_name.
	(w32font_open_internal): Use xmalloc, xrealloc, xfree.

2008-02-03  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (OBJ1): Include font.o here.
	(FONTOBJ) [USE_FONTBACKEND]: Instead of here.

2008-02-02  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (temacs): Bump EMHEAP to 21.

2008-02-01  Jason Rumney  <jasonr@gnu.org>

	* s/cygwin.h: Define VIRT_ADDR_VARIES.

	* puresize.h [VIRT_ADDR_VARIES]: Don't include CYGWIN in condition.

2008-02-01  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (shortlisp): Update for rename of
	../lisp/language/myanmar.el.
	(lisp): Likewise.

2008-02-01  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (get_lface_attributes): Function deleted.
	(merge_named_face, lookup_named_face, lookup_derived_face)
	(realize_named_face): Call lface_from_face_name directly, and use
	the fact that merge_face_vectors does not alter its FROM argument.

2008-02-01  Jason Rumney  <jasonr@gnu.org>

	* w32term.c (w32_read_socket) <WM_CHAR>: Decode non-Unicode
	input in the default locale. Handle non-Unicode multibyte input.

2008-02-01  Kenichi Handa  <handa@ni.aist.go.jp>

	* fontset.c (reorder_font_vector): Exclude nil elements from the
	font group.  Don't try multiple fonts.